Bug 477849 - After 126eb2c19a171cdad49d729ed1418be055006ba1 in plasma-desktop and 5d74bafbe8252c45384dc6e99daf0393d567b350 in plasma-workspace, panel config dialog disappears when applet popup disappears
Summary: After 126eb2c19a171cdad49d729ed1418be055006ba1 in plasma-desktop and 5d74bafb...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 478473 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-01 16:20 UTC by Nate Graham
Modified: 2023-12-14 12:25 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-12-01 16:20:59 UTC
Everything from git master on Plasma 6 Wayland, 200% scale.

STEPS TO REPRODUCE
1. Right-click on Panel > Enter Edit Mode
2. Move pointer over an applet to make the hover config overlay for it appear (due to Bug 477846, it's enormous)
3. Move the pointer over the hover overlay
4. Move the pointer over the desktop and wait a few seconds

OBSERVED RESULT
The applet hover overlay as well as the Panel config dialog both disappear

EXPECTED RESULT
Only the applet hover overlay disappears
Comment 1 fanzhuyifan 2023-12-09 03:02:52 UTC
Can confirm the bug on master. Have not verified the two commits yet.
Comment 2 Bug Janitor Service 2023-12-12 11:09:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3676
Comment 3 Nate Graham 2023-12-13 16:22:04 UTC
*** Bug 478473 has been marked as a duplicate of this bug. ***
Comment 4 Marco Martin 2023-12-14 12:25:05 UTC
Git commit 8a6f5c509204868bd0c4a4aec88872b59ccdbbc0 by Marco Martin.
Committed on 14/12/2023 at 13:25.
Pushed by mart into branch 'master'.

Don't close the view when little config popup close

get focus to the view back when one of those popups close,
also invoke parent's focusInEvent, giving the proper control keyboard
focus

M  +9    -0    shell/panelconfigview.cpp
M  +1    -0    shell/panelconfigview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/8a6f5c509204868bd0c4a4aec88872b59ccdbbc0