Don't close the view when little config popup close

get focus to the view back when one of those popups close,
also invoke parent's focusInEvent, giving the proper control keyboard
focus

BUG:477849